# libc-constant-deprecator

./: Cargo.toml  DEPRECATION_NOTICE  constant-deprecator  rust-toolchain.toml  rustfmt.toml
libc-constant-deprecator-bin/: Cargo.toml
libc-constant-deprecator-bin/src/: main.rs
libc-constant-deprecator-lib/: Cargo.toml
libc-constant-deprecator-lib/src/: constant.rs  constant_container.rs  errors.rs  lib.rs  macros.rs  parser.rs  scanner.rs  source_file.rs  support.rs
libc-constant-deprecator-lib/src/constant_container/: borrowed.rs
libc-constant-deprecator-lib/src/constant_container/borrowed/: borrowed_element.rs
libc-constant-deprecator-lib/src/parser/: const_container_builder.rs  internal_parser.rs  ir_container.rs  macro_parser.rs  traversal.rs
libc-constant-deprecator-lib/src/parser/traversal/: macro_iterator.rs  wrapper.rs
libc-constant-deprecator-lib/src/parser/traversal/macro_iterator/: container.rs  item_type.rs
libc-constant-deprecator-lib/src/parser/traversal/macro_iterator/container/: internal.rs
libc-constant-deprecator-lib/src/parser/traversal/wrapper/: internal.rs
notes/: main.typ
src/: constant.rs  constant_container.rs  errors.rs  lib.rs  macros.rs  parser.rs  scanner.rs  source_file.rs  support.rs
src/constant_container/: borrowed.rs
src/parser/: macro_parser.rs
