[package]
name = "libc-constant-deprecator"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo_metadata = "0.23.1"
gix = { version = "0.80.0", features = ["blocking-network-client", "blocking-http-transport-reqwest", "blocking-http-transport-reqwest-rust-tls"] }
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
thiserror = "2.0.18"
walkdir = "2.5.0"
