[package]
name = "libc-constant-deprecator"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = "warn"

[dependencies]
cargo_metadata = "0.23.1"
gix = { version = "0.81.0", features = ["async-network-client"] }
itertools = "0.14.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
regex = "1.12.3"
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
walkdir = "2.5.0"
