[package]
name = "libc-constant-deprecator-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["wrap_help", "derive"] }
futures = "0.3.32"
libc-constant-deprecator-lib = { version = "0.1.0", path = "../libc-constant-deprecator-lib" }
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["full"] }

[lints]
workspace = true
